# ml_workflows

./: LICENSE  LICENSE.md  README.md
rs_ml/rs_kmeans/: README.md  check_common_classes.py  environment.yml  kmeans_zonal.py  pyproject.toml
rs_ml/rs_xgboost/: README.md  environment.yml  pyproject.toml  xgboost_approach.ipynb
rs_tools/: downscale_satellite_imgs.py  environment.yml  interpolate_same_resolution.py  pyproject.toml
