[tool.poetry]
name = " rs-kmeans"
version = "0.1.0"
description = "This project creates an interactive webmap"
authors = ["Antonios Koutroumpas <antonkout@gmail.com>"]
license = "Copyright 2023 AntonKout, all rights reserved."

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.23.4"
rasterio = "1.2.10"
loguru = "0.5.3"
numba = "0.56.4"
faiss-cpu = "1.7.4"
pandas = "1.5.2"
scipy = "1.9.3"

[tool.pytest.ini_options]
filterwarnings = [
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"